package mode.stateMode;

/**
 * @Author ws
 * @Date 2021/5/27 10:18
 */
public abstract class AbstractState {
    abstract void action(Context context);
}
